<resources>
    <string name="app_name">FshApp</string>
    <string name="tesmonial">TESTMONIALS</string>
    <string name="content_des1">FSH Image 1</string>
    <string name="coach_des">We have different kinds of land transports ready to cater for different journeys and functions. Our prices are just fair. hoping to see you using of our means of transport so that you can join a group of happy custormers. Feel free to contact us if you need more information</string>
    <string name="about">ABOUT US</string>
    <string name="tesmonial1">We had a good time using your services</string>
    <string name="tesmonial2">We always enjoy your services</string>
    <string name="tesmonial3">Your services are just wonderful</string>
    <string name="tesmonial4">Can\'t wait to use your services again</string>
    <string name="content_des2">FSH Image 2</string>
    <string name="sign_in">SIGN IN</string>
   <string name="location_des">We are near Chilinde parish, Area 23, Kawale Malawi. For precise location click on map button on at the home screen</string>
    <string name="content_des3">FSH Image 3</string>
    <string name="continue_but">CONTINUE</string>
    <string name="large_text">When you are looking for a dedicated and trustworthy company, why not turn to us? With many years of experience in
                                the industry, we are a proven leader and have a deep commitment to our customers.
    </string>
    <string name="large_text1"> We are a full service transportation and logistics provider offering airfreight, truckload, ocean freight, railway transportation,
                            expedited, inter modal, project management, and specialized services. As one of the top freight forwarding companies, we have the expertise
                            that allows us to prepare and process the documentation and perform related activities pertaining to international shipments.
                            With transportation solutions including Air and Sea, Distribution (including Truckload and Less Than Truckload), 3PL Services, Warehouse
                            Management and Inter modal, we can create a unique supply chain logistics solution that will allow you to focus on what matters most – your
                            core goals.</string>
    <string name="large_text2">Through ongoing education of our agents both customer service and cartage  as well as through our partners, We ensure global governmental compliance. Key
        professional and regulatory memberships include the Transportation Security Administration. In addition, we are a TAPA and C-TPAT member and have key market
        Certified Cargo Screening Facilities.</string>
    <string name="our_location">Our Location</string>
    <string name="details_but">BOOK SERVICE</string>
    <string name="home_name">Home</string>
    <string name="services">OUR SERVICES</string>
    <string name="land_transport">LAND</string>
    <string name="sea_transport">SEA</string>
    <string name="air_transport">AIR</string>
    <string name="action_about">About Us</string>
    <string name="action_help">Help</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome_page">For You to get started with our app you have to launch/open it and choose your preferred language. After that you have to click continue to get to the home screen (Figure 1.0 below shows the choose language screen)</string>
    <string name="next_window">Then you will be taken to the home page where you have a lot of options to select from. if you want to know more about the service you can just TAP on it and you will be directed to the product details page. There is a button for location where you are presented with google map to help find our business location easier. there is call button in case you want to have some talks with us. There is also an emal button if you want to write us an email. last is the whatsapp button for a chat on whatsApp</string>
    <string name="options_tab">On same main page you are also presented with different icons to perform different actions. There is a search icon that gives you a chance to search for different services present is the app. There is also a sign in icon that lets you signing to your account. once on the sign in page you can sign in to your account or follow the given links to create an account if you don\'t have one or reset your password if forgotten</string>
    <string-array name="langueges">
        <item>--select language--</item>
        <item>English</item>
        <item>Chichewa</item>
    </string-array>
        <string-array name="trans_type">
            <item>--Transport Category--</item>
            <item>Land</item>
            <item>Sea</item>
            <item>Air</item>
        </string-array>
        <string-array name="trans_from">
            <item>--Journey From--</item>
            <item>Lilongwe</item>
            <item>Mzuzu</item>
            <item>Blantyre</item>
            <item>Zomba</item>
        </string-array>
        <string-array name="trans_to">
            <item>--Journey From--</item>
            <item>Lilongwe</item>
            <item>Mzuzu</item>
            <item>Blantyre</item>
        </string-array>
    <string name="fsh_text">A transportation company is a business that transports freight from one location to another which is a key in the value chain in manufacturing.</string>
    <string name="fsh_text2">The entire process of transporting products from the producer to the consumer which includes storage, transportation, warehousing, handling, packaging, and the exchange of information is called logistics.
        </string>
    <string name="fsh_text3">Even though less than one percent of world transport is done by airline it accounts for forty percent of the value and becomes a valuable step in the logistics process.
        </string>
    <string name="coaches">We have nice coaches to Travel both in and outside Malawi</string>
    <string name="action_settings">Settings</string>
    <string name="all_setting">ALL SETTING</string>
    <string name="work_in_progress">WORK IN PROGRESS</string>
    <string name="fsh_logo">fsh logo</string>
</resources>