<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.fshapp.startActivity">
    <item
        android:id="@+id/our_location"
        android:orderInCategory="1"
        android:title="@string/sea_transport"
        android:icon="@drawable/location_icon_foreground"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/call_us"
        android:orderInCategory="2"
        android:title="@string/land_transport"
        android:icon="@drawable/call_icon_foreground"
        app:showAsAction="ifRoom"
         />
    <item
        android:id="@+id/email_us"
        android:orderInCategory="3"
        android:title="@string/air_transport"
        android:icon="@drawable/email_icon_foreground"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/whatsapp_us"
        android:orderInCategory="3"
        android:title="@string/air_transport"
        android:icon="@drawable/forum_icon_foreground"
        app:showAsAction="ifRoom"/>
</menu>