<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res_auto"
    xmlns:card_view2="http://schemas.android.com/apk/re_auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_help">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/our_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/get_started"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textColor="#CC8010"
            android:fontFamily="@font/montserrat_semibold">
        </TextView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/card1"
            android:layout_margin="5dp"
            android:layout_marginBottom="15dp"
            card_view:cardCornerRadius="4dp"
            android:layout_below="@id/our_services">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/welcome_page" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="15dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/content_des1"
                    android:background="@drawable/fsh_welcome_screenshots"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:id="@+id/card2"
            android:layout_margin="5dp"
            android:layout_marginBottom="15dp"
            card_view2:cardCornerRadius="4dp"
            android:layout_below="@id/card1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/next_window" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1.0"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/content_des2"
                    android:background="@drawable/fsh_home_screenshots"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:id="@+id/card3"
            android:layout_margin="5dp"
            android:layout_marginBottom="15dp"
            card_view2:cardCornerRadius="4dp"
            android:layout_below="@id/card2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/options_tab"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_marginStart="5dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="15dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/content_des3"
                    android:background="@drawable/fsh_main_page_screenshots"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>