<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_aboutus">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/fshlogo"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:textColor="#CC8010"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/about"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/montserrat_semibold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:text="@string/large_text"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat_semibold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:text="@string/large_text"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat_semibold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:text="@string/large_text2"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/text2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:textColor="#CC8010"
            android:fontFamily="@font/montserrat_semibold"
            android:justificationMode="inter_word"
            android:text="@string/our_location"
            android:textSize="24dp" />
        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat_semibold"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:text="@string/location_des"
            android:textSize="15dp" />
    </RelativeLayout>


</androidx.core.widget.NestedScrollView>